feat(ui): GitHub-style heatmap, default to hourly.

--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
@@ -9,12 +9,8 @@
     "daily": "Daily",
     "hourly": "Hourly",
     "legend": {
-      "successRateSpectrum": "Success Rate Spectrum",
-      "tooltips": {
-        "failed": "Less than {{percent}}% Success",
-        "success100": "{{percent}}% Success",
-        "successRate": "{{percent}}%+ Success Rate"
-      }
+      "less": "Less",
+      "more": "More"
     },
     "navigation": {
       "nextMonth": "Next month",
@@ -24,6 +20,7 @@
     },
     "noData": "No data available",
     "noRuns": "No runs",
+    "totalRuns": "Total Runs",
     "week": "Week {{weekNumber}}",
     "weekdays": {
       "friday": "Fri",
