--- a/airflow-core/src/airflow/ui/public/i18n/locales/zh-TW/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/zh-TW/dag.json
@@ -10,12 +10,8 @@
     "error": "載入日曆資料時發生錯誤",
     "hourly": "每小時",
     "legend": {
-      "successRateSpectrum": "成功率光譜",
-      "tooltips": {
-        "failed": "成功率低於{{percent}}%",
-        "success100": "{{percent}}%成功",
-        "successRate": "{{percent}}%以上成功率"
-      }
+      "less": "較少",
+      "more": "較多"
     },
     "navigation": {
       "nextMonth": "下一月",
@@ -25,6 +21,7 @@
     },
     "noData": "沒有可用的資料",
     "noRuns": "沒有執行",
+    "totalRuns": "總執行數",
     "week": "第 {{weekNumber}} 週",
     "weekdays": {
       "friday": "五",
