Trigger form can be called via URL with field pre-poulated issue is resolved.

--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
@@ -113,6 +113,7 @@
     "runs": "Runs",
     "taskInstances": "Task Instances",
     "tasks": "Tasks",
+    "trigger": "Trigger",
     "xcom": "XCom"
   },
   "taskGroups": {
