--- a/airflow-core/src/airflow/ui/public/i18n/locales/hi/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/hi/dag.json
@@ -20,7 +20,7 @@
   "header": {
     "buttons": {
       "advanced": "उन्नत",
-      "dagDocs": "डैग दस्तावेज"
+      "dagDocs": "डैग प्रलेखन"
     }
   },
   "logs": {
