Upgrade keyboard commands to not conflict with regular arrow actions

--- a/airflow-core/src/airflow/ui/public/i18n/locales/de/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/de/dag.json
@@ -40,8 +40,8 @@
     "warning": "WARNING"
   },
   "navigation": {
-    "jump": "Springen: Umschalttaste+{{arrow}}",
-    "navigation": "Navigation: {{arrow}}",
+    "jump": "Springen: {{meta}}+{{arrow}}",
+    "navigation": "Navigation: Umschalttaste+{{arrow}}",
     "toggleGroup": "Gruppen umschalten: Leertaste"
   },
   "overview": {
