--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
@@ -40,8 +40,8 @@
     "warning": "WARNING"
   },
   "navigation": {
-    "jump": "Jump: Shift+{{arrow}}",
-    "navigation": "Navigation: {{arrow}}",
+    "jump": "Jump: {{meta}}+{{arrow}}",
+    "navigation": "Navigation: Shift+{{arrow}}",
     "toggleGroup": "Toggle group: Space"
   },
   "overview": {
