--- a/airflow-core/src/airflow/ui/public/i18n/locales/ca/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/ca/common.json
@@ -225,7 +225,7 @@
     "dagVersion": "Versió del DAG",
     "executor": "Executor",
     "executorConfig": "Configuració de l'executor",
-    "hostname": "Amfitrió",
+    "hostname": "Host",
     "maxTries": "Màxim de reintents",
     "pid": "PID",
     "pool": "Pool",
