--- a/airflow-core/src/airflow/ui/public/i18n/locales/ca/hitl.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/ca/hitl.json
@@ -1,4 +1,11 @@
 {
+  "filters": {
+    "response": {
+      "all": "Totes",
+      "pending": "Pendents",
+      "received": "Revisades"
+    }
+  },
   "requiredAction_one": "Acció necessària",
   "requiredAction_other": "Accions necessàries",
   "requiredActionState": "Estat de l'acció necessària",
