--- a/airflow-core/src/airflow/ui/public/i18n/locales/pl/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pl/common.json
@@ -7,7 +7,7 @@
     "Providers": "Providery",
     "Variables": "Zmienne"
   },
-  "allOperators": "Wszyscy operatorzy",
+  "allOperators": "Wszystkie operatory",
   "asset_few": "Zasoby",
   "asset_many": "Zasobów",
   "asset_one": "Zasób",
