--- a/airflow-core/src/airflow/ui/public/i18n/locales/pl/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/pl/dag.json
@@ -18,7 +18,7 @@
       "previousMonth": "Poprzedni miesiąc",
       "previousYear": "Poprzedni rok"
     },
-    "noData": "Brak dostępnych danych",
+    "noData": "Brak danych",
     "noRuns": "Brak wykonań",
     "totalRuns": "Łączna liczba wykonań",
     "week": "Tydzień {{weekNumber}}",
