--- a/airflow-core/src/airflow/ui/public/i18n/locales/ca/dags.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/ca/dags.json
@@ -70,9 +70,9 @@
   "search": {
     "advanced": "Cerca avançada",
     "clear": "Netejar cerca",
-    "dags": "Buscar Dags",
+    "dags": "Cercar Dags",
     "hotkey": "+K",
-    "tasks": "Buscar Tasques"
+    "tasks": "Cercar Tasques"
   },
   "sort": {
     "displayName": {
