Add pendingActions onto ui/dags

--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/dags.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/dags.json
@@ -20,10 +20,18 @@
       "all": "All",
       "paused": "Paused"
     },
+    "pendingActions": {
+      "all": "All",
+      "withPending": "With Pending Actions",
+      "withoutPending": "Without Pending Actions"
+    },
     "runIdPatternFilter": "Search Dag Runs",
     "triggeringUserNameFilter": "Search by Triggering User"
   },
   "ownerLink": "Owner link for {{owner}}",
+  "pendingActionsBadge": {
+    "tooltip": "{{count}} tasks need review"
+  },
   "runAndTaskActions": {
     "affectedTasks": {
       "noItemsFound": "No tasks found.",
