--- a/airflow-core/src/airflow/ui/public/i18n/locales/hu/common.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/hu/common.json
@@ -190,7 +190,7 @@
     "success": "Sikeres",
     "up_for_reschedule": "Újraütemezésre vár",
     "up_for_retry": "Újrapróbálkozásra vár",
-    "upstream_failed": "ELőfeltétel sikertelen"
+    "upstream_failed": "Előfeltétel sikertelen"
   },
   "switchToDarkMode": "Váltás sötét módra",
   "switchToLightMode": "Váltás világos módra",
