--- a/airflow-core/src/airflow/ui/public/i18n/locales/hu/hitl.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/hu/hitl.json
@@ -1,4 +1,11 @@
 {
+  "filters": {
+    "response": {
+      "all": "Összes",
+      "pending": "Függőben",
+      "received": "Fogadva"
+    }
+  },
   "requiredAction_one": "Szükséges művelet",
   "requiredAction_other": "Szükséges műveletek",
   "requiredActionState": "Szükséges művelet állapota",
