Add run type filter to grid view for DAG run columns
  Add a run type filter to the grid view that allows users to filter
  DAG run columns by run type (scheduled, manual, backfill, asset_triggered).
  The filter is available in the grid options panel and persists user
  selection per DAG using localStorage.

--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
@@ -109,6 +109,9 @@
     },
     "graphDirection": {
       "label": "Graph Direction"
+    },
+    "runTypeFilter": {
+      "label": "Run Type Filter"
     }
   },
   "paramsFailed": "Failed to load params",
