--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
@@ -110,8 +110,8 @@
     "graphDirection": {
       "label": "Graph Direction"
     },
-    "runTypeFilter": {
-      "label": "Run Type Filter"
+    "runType": {
+      "label": "Run Type"
     }
   },
   "paramsFailed": "Failed to load params",
