Add triggering user filter to grid view
  - Add QueryDagRunTriggeringUserSearch parameter to filter by triggering_user_name
  - Update grid API endpoints to accept triggering_user parameter
  - Add triggering user search input to grid options panel
  - Implement state persistence with localStorage per DAG
  - Update OpenAPI generated types and services to support new parameter
  - Modify useGridRuns and useGridStructure hooks to pass triggeringUser
  - Add English translations for "Triggering User Name" label
  - Enable real-time filtering of DAG runs by username

  Users can now filter grid view columns to show only runs triggered by
  specific users through a search field in the options panel.

--- a/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
+++ b/airflow-core/src/airflow/ui/public/i18n/locales/en/dag.json
@@ -112,6 +112,10 @@
     },
     "runType": {
       "label": "Run Type"
+    },
+    "triggeringUser": {
+      "label": "Triggering User Name",
+      "placeholder": "Enter user name to filter..."
     }
   },
   "paramsFailed": "Failed to load params",
